// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should contain correct values for grid 1`] = `
Object {
  "display": "grid",
  "gridColumnGap": "max(1rem, min(3.6vw, 2.25rem))",
  "gridTemplateColumns": "[grid-start] calc(max(1rem, min(7vw, 8.4rem)) - max(1rem, min(3.6vw, 2.25rem))) [content-start] repeat(12, minmax(0, 1fr)) [content-end] calc(max(1rem, min(7vw, 8.4rem)) - max(1rem, min(3.6vw, 2.25rem))) [grid-end]",
  "margin": "0 auto",
  "maxWidth": "120rem",
  "padding": 0,
}
`;

exports[`should contain correct values for grid7vwLinear 1`] = `
Object {
  "display": "grid",
  "gridColumnGap": "max(1rem, min(3.6vw, 2.25rem))",
  "gridTemplateColumns": "[grid-start] calc(max(1rem, min(7vw, 8.4rem)) - max(1rem, min(3.6vw, 2.25rem))) [content-start] repeat(12, minmax(0, 1fr)) [content-end] calc(max(1rem, min(7vw, 8.4rem)) - max(1rem, min(3.6vw, 2.25rem))) [grid-end]",
  "margin": "0 auto",
  "maxWidth": "120rem",
  "padding": 0,
}
`;

exports[`should contain correct values for gridFluidInterpolation 1`] = `
Object {
  "@media(min-width:1760px)": Object {
    "gridTemplateColumns": "[grid-start] calc(max(7.7rem, min(calc(43vw - 39.6rem), 12rem)) - max(1rem, min(3.6vw, 2.25rem))) [content-start] repeat(12, minmax(0, 1fr)) [content-end] calc(max(7.7rem, min(calc(43vw - 39.6rem), 12rem)) - max(1rem, min(3.6vw, 2.25rem))) [grid-end]",
  },
  "display": "grid",
  "gridColumnGap": "max(1rem, min(3.6vw, 2.25rem))",
  "gridTemplateColumns": "[grid-start] calc(max(1rem, min(7vw, 7.7rem)) - max(1rem, min(3.6vw, 2.25rem))) [content-start] repeat(12, minmax(0, 1fr)) [content-end] calc(max(1rem, min(7vw, 7.7rem)) - max(1rem, min(3.6vw, 2.25rem))) [grid-end]",
  "margin": "0 auto",
  "maxWidth": "120rem",
  "padding": 0,
}
`;

exports[`should contain correct values for gridGutter 1`] = `"max(1rem, min(3.6vw, 2.25rem))"`;

exports[`should contain correct values for gridImprovedLinear 1`] = `
Object {
  "display": "grid",
  "gridColumnGap": "max(1rem, min(3.6vw, 2.25rem))",
  "gridTemplateColumns": "[grid-start] calc(max(1.4rem, min(calc(12vw - 2.4rem), 12rem)) - max(1rem, min(3.6vw, 2.25rem))) [content-start] repeat(12, minmax(0, 1fr)) [content-end] calc(max(1.4rem, min(calc(12vw - 2.4rem), 12rem)) - max(1rem, min(3.6vw, 2.25rem))) [grid-end]",
  "margin": "0 auto",
  "maxWidth": "120rem",
  "padding": 0,
}
`;

exports[`should contain correct values for gridMaxWidth 1`] = `"120rem"`;

exports[`should contain correct values for gridSafeZone 1`] = `"max(1rem, min(7vw, 8.4rem))"`;

exports[`should contain correct values for gridSafeZone7vwLinear 1`] = `"max(1rem, min(7vw, 8.4rem))"`;

exports[`should contain correct values for gridSafeZoneFluidInterpolation 1`] = `
Object {
  "base": "max(1rem, min(7vw, 7.7rem))",
  "xl": "max(7.7rem, min(calc(43vw - 39.6rem), 12rem))",
}
`;

exports[`should contain correct values for gridSafeZoneImprovedLinear 1`] = `"max(1.4rem, min(calc(12vw - 2.4rem), 12rem))"`;
